# encrypted-file-storage

./: .gitignore  CMakeLists.txt  test.sh
docs/: README.md
src/: CMakeLists.txt  encryption.cpp  encryption.hpp  main.cpp  securefile.cpp  securefile.hpp  test.cpp
test/: test_encryption.cpp
